# gimp_animation_plugin

./: .gitignore  README.md  export_animation.py  install.sh  pyproject.toml
tests/: conftest.py  test_export_animation.py
