[project]
name = "export-animation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []  # gi is system-provided, not pip-installable

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
python-preference = "system"  # critical — must use system Python that has gi available

[tool.pytest.ini_options]
testpaths = ["tests"]
